--- a/main.html
+++ b/main.html
@@ -16,9 +16,15 @@
                 <h1>Duckmusic</h1>
             </div>
             <div></div>
-            <button class="button_for_logo">
-                <img src="img\4a1b4b63-5562-4eb2-99a8-2384839aafbc.png" class="profile" alt="" />
-            </button>
+            <div class=" profile_container">
+                <div class="text_for_profile"><a href="/login.html">login</a>
+                /
+                <a href="/regist.html">register</a>
+            </div>
+                <button class="button_for_profile">
+                    <img src="img\4a1b4b63-5562-4eb2-99a8-2384839aafbc.png" class="profile" alt="" />
+                </button>
+               </div>
         </div>
         <div class="menu">
             <div class="body_menu">
