--- a/main.html
+++ b/main.html
@@ -15,7 +15,8 @@
                 <div class="logo"></div>
                 <h1>Duckmusic</h1>
             </div>
-            <div></div>
+            aa
+            <div class="head_search_container"></div>
             <div class=" profile_container">
                 <div class="text_for_profile"><a href="/login.html">login</a>
                 /
