--- a/login.html
+++ b/login.html
@@ -30,11 +30,11 @@
            
             </div>
             <div class="input">
-                    <input type="text" class="input_Style email" placeholder="email" />
+                    <input type="text" class="input_Style email" placeholder="Email" />
                     <hr class="line" />
             </div>
               <div class="input">
-                    <input type="text" class="input_Style password" placeholder="password" />
+                    <input type="text" class="input_Style password" placeholder="Password" />
                     <hr class="line" />
               </div>
 
@@ -42,8 +42,8 @@
             </div>
 
 
-            <hr class="bottomLine" />
             <div class="inner">
+            <hr class="bottomLine" />
                 <button class="button">Confirm</button>
             </div>
         </div>
