--- a/regist.html
+++ b/regist.html
@@ -27,29 +27,25 @@
                         <h2 class="registtext">Registration</h2>
                         <hr class="registline" />
                     </div>
-                </div>
+                </div>g
             <div class="input">
-                    <input type="text" class="input_Style name" placeholder="name" />
+                    <input type="text" class="input_Style name" placeholder="Name" />
                     <hr class="line" />
-            </div>
+                 </div>
             <div class="input">
-                    <input type="text" class="input_Style email" placeholder="email" />
+                    <input type="text" class="input_Style email" placeholder="Email" />
                     <hr class="line" />
             </div>
               <div class="input">
-                    <input type="text" class="input_Style password" placeholder="password" />
+                    <input type="text" class="input_Style password" placeholder="Password" />
                     <hr class="line" />
               </div>
-                <div class="input">
-                    <input type="text" class="input_Style check_Password" placeholder="check password " />
-                    <hr class="line" />
-                </div>
-
+              
             </div>
             </div>
 
 
-            <div class="inner">
+            <div class="inner bottomBox">
                 <a class="acount" href="login.html">I already have an acount</a>
                 <hr class="bottomLine"/>
                 <button  class="button">Confirm</button>
