--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
             </div>
             </div>
 
-
+   <div class="containerError"></div>
             <div class="inner">
             <hr class="bottomLine" />
                 <button class="button">Confirm</button>
