--- a/regist.html
+++ b/regist.html
@@ -27,7 +27,7 @@
                         <h2 class="registtext">Registration</h2>
                         <hr class="registline" />
                     </div>
-                </div>g
+                </div>
             <div class="input">
                     <input type="text" class="input_Style name" placeholder="Name" />
                     <hr class="line" />
