--- a/main.html
+++ b/main.html
@@ -66,8 +66,8 @@
                     <h1 class="text_menu" id="playlist">Плейлист</h1>
 
                 </div>
-                <div class="menu_item" id="save">
-                    <button class="button_img" id="save">
+                <div class="menu_item savePage" id="save">
+                    <button class="button_img " id="save">
                         <img class="menu_img" id="save" src="img\db4b4dc1-2f6c-4fd0-a5ed-f62b5af96c84.png" alt="" />
                     </button>
                     <h1 class="text_menu" id="save">Збережені</h1>
