--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
        
             <div class="head_search_container"></div>
             <div class=" profile_container">
-                <div class="text_for_profile"><a href="/login.html">login</a>
-                /
-                <a href="/regist.html">register</a>
+                <div class="text_for_profile"><a href="/login.html">Логін</a>
+                |
+                <a href="/regist.html">Регістр</a>
             </div>
                 <button class="button_for_profile">
                     <img src="img\4a1b4b63-5562-4eb2-99a8-2384839aafbc.png" class="profile" alt="" />
