--- a/Main/main.html
+++ b/Main/main.html
@@ -25,7 +25,7 @@
                 <a href="../Register/regist.html">Регістр</a>
             </div>
                 <button class="button_for_profile">
-                    <img src="../img\4a1b4b63-5562-4eb2-99a8-2384839aafbc.png" class="profile" alt="" />
+                    <img src="../img/4a1b4b63-5562-4eb2-99a8-2384839aafbc.png" class="profile" alt="" />
                 </button>
                </div>
         </div>                      
