--- a/Main/main.html
+++ b/Main/main.html
@@ -86,7 +86,7 @@
             <input type="range" class="range_Audio" value="0" max="100">
             <audio src="null" class="audioPlayer"></audio>
 
-
+            <h1 class="textPlayers"><p class="textPlayersMusic">Duckmusic</p></h1>
             <div class="buttons_Players_Music">
                 <button class="previous_Song_Button">
                     <img src="../img\icons8-next-50 (1).png" class="previous_Song_Img" alt=""></button>
@@ -94,7 +94,11 @@
                     <img class="img_Play_Music" src="../img\2ff977b7-2c90-41d5-813f-49170d570561.png" alt="">
                 </button>
                 <button class="next_Song_Button">
-                    <img src="../img\icons8-next-50.png" class="next_Song_Img" alt=""></button>
+                    <img src="../img\icons8-next-50.png" class="next_Song_Img" alt="">
+                </button>
+                <button class="buttonSubtitlesSong">
+                    click
+                </button>
 
             </div>
             <div class="player_music_songs_text"></div>
