--- a/Main/main.html
+++ b/Main/main.html
@@ -82,7 +82,8 @@
             </button>
           
             <button class="img_Icon_Autorh_InPlayers">
-                <img src="../img/a3029645548_16.jpg" class='img_Icon_Autorh_InPlayers_Img' alt=""> </button>
+                <img src="../img/a3029645548_16.jpg" class='img_Icon_Autorh_InPlayers_Img' alt=""> 
+            </button>
             <input type="range" class="range_Audio" value="0" max="100">
             <audio src="null" class="audioPlayer"></audio>
 
