--- a/Main/main.html
+++ b/Main/main.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    
+    <div class="supportContainer">: &#x1F1FA;&#x1F1E6: Support Ukraine 🇺🇦
+        Help Provide Humanitarian Aid to Ukraine.</div>
     <div class="body">
         <div class="head">
             <div class="div_for_header">
-                <div class="logo"></div>
+                <a href="https://store.steampowered.com/app/379720/DOOM/">
+                <div class="logo"></div></a>
                 <h1>Duckmusic</h1>
             </div>
                                                                             
