--- a/Main/main.html
+++ b/Main/main.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="supportContainer">: &#x1F1FA;&#x1F1E6: Support Ukraine 🇺🇦
-        Help Provide Humanitarian Aid to Ukraine.</div>
+    <div class="supportContainer"><p class="supportText"> &#x1F1FA;&#x1F1E6: Support Ukraine 🇺🇦
+        Help Provide Humanitarian Aid to Ukraine. &#127482;&#127462;</p></div>
     <div class="body">
         <div class="head">
             <div class="div_for_header">
