--- a/Register/regist.html
+++ b/Register/regist.html
@@ -46,7 +46,7 @@
 
 
             <div class="inner bottomBox">
-                <a class="acount" href="login.html">I already have an acount</a>
+                <a class="acount" href="../Login/login.html">I already have an acount</a>
                 <hr class="bottomLine"/>
                 <button  class="button">Confirm</button>
               </div>
